--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "node": "v11.3.0"
   },
   "scripts": {
+    "heroku-prebuild": "npm install --dev",
     "start": "webpack-dev-server --mode development --open --hot",
     "build": "webpack --mode production"
   },
