--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "heroku-prebuild": "npm install --dev",
     "start": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "heroku-postbuild": "webpack -p"
   },
   "author": "Jordan Falcon",
   "license": "MIT",
