--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "heroku-prebuild": "npm install --dev",
     "start": "webpack-dev-server --port $PORT --host 0.0.0.0",
-    "test": "webpack-dev-server --mode development --open --hot",
+    "test": "webpack-dev-server --open",
     "heroku-postbuild": "webpack -p"
   },
   "author": "Jordan Falcon",
